imp/imprwParser.py
# Generated from imprw.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class imprwParser ( Parser ):

    grammarFileName = "imprw.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'skip'", "'read'", "'write'", 
                     "':='", "'if'", "'then'", "'else'", "'fi'", "'while'", 
                     "'{'", "'}'", "'do'", "'od'", "','", "'or'", "'and'", 
                     "'not'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NUMBER", "VARNAME", "RELATION", "WEAKOP", 
                      "STRONGOP", "TRUTHVAL", "WS" ]

    RULE_progr = 0
    RULE_series = 1
    RULE_stmt = 2
    RULE_inputStmt = 3
    RULE_outputStmt = 4
    RULE_assignStmt = 5
    RULE_condStmt = 6
    RULE_loop = 7
    RULE_anotation = 8
    RULE_compar = 9
    RULE_comparterm = 10
    RULE_comparelem = 11
    RULE_varlist = 12
    RULE_expr = 13
    RULE_term = 14
    RULE_elem = 15

    ruleNames =  [ "progr", "series", "stmt", "inputStmt", "outputStmt", 
                   "assignStmt", "condStmt", "loop", "anotation", "compar", 
                   "comparterm", "comparelem", "varlist", "expr", "term", 
                   "elem" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    NUMBER=21
    VARNAME=22
    RELATION=23
    WEAKOP=24
    STRONGOP=25
    TRUTHVAL=26
    WS=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def series(self):
            return self.getTypedRuleContext(imprwParser.SeriesContext,0)


        def getRuleIndex(self):
            return imprwParser.RULE_progr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgr" ):
                listener.enterProgr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgr" ):
                listener.exitProgr(self)




    def progr(self):

        localctx = imprwParser.ProgrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_progr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.series(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SeriesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(imprwParser.StmtContext,0)


        def series(self):
            return self.getTypedRuleContext(imprwParser.SeriesContext,0)


        def getRuleIndex(self):
            return imprwParser.RULE_series

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeries" ):
                listener.enterSeries(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeries" ):
                listener.exitSeries(self)



    def series(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = imprwParser.SeriesContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_series, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.stmt(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 42
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = imprwParser.SeriesContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_series)
                    self.state = 37
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 38
                    self.match(imprwParser.T__0)
                    self.state = 39
                    self.stmt(0) 
                self.state = 44
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inputStmt(self):
            return self.getTypedRuleContext(imprwParser.InputStmtContext,0)


        def outputStmt(self):
            return self.getTypedRuleContext(imprwParser.OutputStmtContext,0)


        def assignStmt(self):
            return self.getTypedRuleContext(imprwParser.AssignStmtContext,0)


        def condStmt(self):
            return self.getTypedRuleContext(imprwParser.CondStmtContext,0)


        def loop(self):
            return self.getTypedRuleContext(imprwParser.LoopContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(imprwParser.StmtContext)
            else:
                return self.getTypedRuleContext(imprwParser.StmtContext,i)


        def getRuleIndex(self):
            return imprwParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)



    def stmt(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = imprwParser.StmtContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_stmt, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [imprwParser.T__2]:
                self.state = 46
                self.inputStmt()
                pass
            elif token in [imprwParser.T__3]:
                self.state = 47
                self.outputStmt()
                pass
            elif token in [imprwParser.VARNAME]:
                self.state = 48
                self.assignStmt()
                pass
            elif token in [imprwParser.T__5]:
                self.state = 49
                self.condStmt()
                pass
            elif token in [imprwParser.T__9]:
                self.state = 50
                self.loop()
                pass
            elif token in [imprwParser.T__1]:
                self.state = 51
                self.match(imprwParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 59
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = imprwParser.StmtContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_stmt)
                    self.state = 54
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 55
                    self.match(imprwParser.T__0)
                    self.state = 56
                    self.stmt(3) 
                self.state = 61
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class InputStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(imprwParser.VarlistContext,0)


        def getRuleIndex(self):
            return imprwParser.RULE_inputStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputStmt" ):
                listener.enterInputStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputStmt" ):
                listener.exitInputStmt(self)




    def inputStmt(self):

        localctx = imprwParser.InputStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_inputStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(imprwParser.T__2)
            self.state = 63
            self.varlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OutputStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(imprwParser.VarlistContext,0)


        def getRuleIndex(self):
            return imprwParser.RULE_outputStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutputStmt" ):
                listener.enterOutputStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutputStmt" ):
                listener.exitOutputStmt(self)




    def outputStmt(self):

        localctx = imprwParser.OutputStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_outputStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(imprwParser.T__3)
            self.state = 66
            self.varlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(imprwParser.VARNAME, 0)

        def expr(self):
            return self.getTypedRuleContext(imprwParser.ExprContext,0)


        def getRuleIndex(self):
            return imprwParser.RULE_assignStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStmt" ):
                listener.enterAssignStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStmt" ):
                listener.exitAssignStmt(self)




    def assignStmt(self):

        localctx = imprwParser.AssignStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(imprwParser.VARNAME)
            self.state = 69
            self.match(imprwParser.T__4)
            self.state = 70
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CondStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compar(self):
            return self.getTypedRuleContext(imprwParser.ComparContext,0)


        def series(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(imprwParser.SeriesContext)
            else:
                return self.getTypedRuleContext(imprwParser.SeriesContext,i)


        def getRuleIndex(self):
            return imprwParser.RULE_condStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondStmt" ):
                listener.enterCondStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondStmt" ):
                listener.exitCondStmt(self)




    def condStmt(self):

        localctx = imprwParser.CondStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_condStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(imprwParser.T__5)
            self.state = 73
            self.compar(0)
            self.state = 74
            self.match(imprwParser.T__6)
            self.state = 75
            self.series(0)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==imprwParser.T__7:
                self.state = 76
                self.match(imprwParser.T__7)
                self.state = 77
                self.series(0)


            self.state = 80
            self.match(imprwParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LoopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compar(self):
            return self.getTypedRuleContext(imprwParser.ComparContext,0)


        def series(self):
            return self.getTypedRuleContext(imprwParser.SeriesContext,0)


        def anotation(self):
            return self.getTypedRuleContext(imprwParser.AnotationContext,0)


        def getRuleIndex(self):
            return imprwParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)




    def loop(self):

        localctx = imprwParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_loop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(imprwParser.T__9)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==imprwParser.T__10:
                self.state = 83
                self.match(imprwParser.T__10)
                self.state = 84
                self.anotation()
                self.state = 85
                self.match(imprwParser.T__11)


            self.state = 89
            self.compar(0)
            self.state = 90
            self.match(imprwParser.T__12)
            self.state = 91
            self.series(0)
            self.state = 92
            self.match(imprwParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AnotationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compar(self):
            return self.getTypedRuleContext(imprwParser.ComparContext,0)


        def expr(self):
            return self.getTypedRuleContext(imprwParser.ExprContext,0)


        def getRuleIndex(self):
            return imprwParser.RULE_anotation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnotation" ):
                listener.enterAnotation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnotation" ):
                listener.exitAnotation(self)




    def anotation(self):

        localctx = imprwParser.AnotationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_anotation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.compar(0)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==imprwParser.T__14:
                self.state = 95
                self.match(imprwParser.T__14)
                self.state = 96
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ComparContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparterm(self):
            return self.getTypedRuleContext(imprwParser.CompartermContext,0)


        def compar(self):
            return self.getTypedRuleContext(imprwParser.ComparContext,0)


        def getRuleIndex(self):
            return imprwParser.RULE_compar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompar" ):
                listener.enterCompar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompar" ):
                listener.exitCompar(self)



    def compar(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = imprwParser.ComparContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_compar, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.comparterm(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 107
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = imprwParser.ComparContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_compar)
                    self.state = 102
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 103
                    self.match(imprwParser.T__15)
                    self.state = 104
                    self.comparterm(0) 
                self.state = 109
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class CompartermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparelem(self):
            return self.getTypedRuleContext(imprwParser.ComparelemContext,0)


        def comparterm(self):
            return self.getTypedRuleContext(imprwParser.CompartermContext,0)


        def getRuleIndex(self):
            return imprwParser.RULE_comparterm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparterm" ):
                listener.enterComparterm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparterm" ):
                listener.exitComparterm(self)



    def comparterm(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = imprwParser.CompartermContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_comparterm, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.comparelem()
            self._ctx.stop = self._input.LT(-1)
            self.state = 118
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = imprwParser.CompartermContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_comparterm)
                    self.state = 113
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 114
                    self.match(imprwParser.T__16)
                    self.state = 115
                    self.comparelem() 
                self.state = 120
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ComparelemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(imprwParser.ExprContext)
            else:
                return self.getTypedRuleContext(imprwParser.ExprContext,i)


        def RELATION(self):
            return self.getToken(imprwParser.RELATION, 0)

        def compar(self):
            return self.getTypedRuleContext(imprwParser.ComparContext,0)


        def getRuleIndex(self):
            return imprwParser.RULE_comparelem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparelem" ):
                listener.enterComparelem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparelem" ):
                listener.exitComparelem(self)




    def comparelem(self):

        localctx = imprwParser.ComparelemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_comparelem)
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.expr(0)
                self.state = 122
                self.match(imprwParser.RELATION)
                self.state = 123
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.expr(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.match(imprwParser.T__17)
                self.state = 127
                self.compar(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(imprwParser.VARNAME)
            else:
                return self.getToken(imprwParser.VARNAME, i)

        def getRuleIndex(self):
            return imprwParser.RULE_varlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarlist" ):
                listener.enterVarlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarlist" ):
                listener.exitVarlist(self)




    def varlist(self):

        localctx = imprwParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_varlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(imprwParser.VARNAME)
            self.state = 135
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 131
                    self.match(imprwParser.T__14)
                    self.state = 132
                    self.match(imprwParser.VARNAME) 
                self.state = 137
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(imprwParser.TermContext,0)


        def expr(self):
            return self.getTypedRuleContext(imprwParser.ExprContext,0)


        def WEAKOP(self):
            return self.getToken(imprwParser.WEAKOP, 0)

        def getRuleIndex(self):
            return imprwParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = imprwParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 26
        self.enterRecursionRule(localctx, 26, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.term(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 146
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = imprwParser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 141
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 142
                    self.match(imprwParser.WEAKOP)
                    self.state = 143
                    self.term(0) 
                self.state = 148
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elem(self):
            return self.getTypedRuleContext(imprwParser.ElemContext,0)


        def term(self):
            return self.getTypedRuleContext(imprwParser.TermContext,0)


        def STRONGOP(self):
            return self.getToken(imprwParser.STRONGOP, 0)

        def getRuleIndex(self):
            return imprwParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)



    def term(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = imprwParser.TermContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 28
        self.enterRecursionRule(localctx, 28, self.RULE_term, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.elem()
            self._ctx.stop = self._input.LT(-1)
            self.state = 157
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = imprwParser.TermContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_term)
                    self.state = 152
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 153
                    self.match(imprwParser.STRONGOP)
                    self.state = 154
                    self.elem() 
                self.state = 159
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ElemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(imprwParser.VARNAME, 0)

        def NUMBER(self):
            return self.getToken(imprwParser.NUMBER, 0)

        def TRUTHVAL(self):
            return self.getToken(imprwParser.TRUTHVAL, 0)

        def expr(self):
            return self.getTypedRuleContext(imprwParser.ExprContext,0)


        def getRuleIndex(self):
            return imprwParser.RULE_elem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElem" ):
                listener.enterElem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElem" ):
                listener.exitElem(self)




    def elem(self):

        localctx = imprwParser.ElemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_elem)
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [imprwParser.VARNAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.match(imprwParser.VARNAME)
                pass
            elif token in [imprwParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.match(imprwParser.NUMBER)
                pass
            elif token in [imprwParser.TRUTHVAL]:
                self.enterOuterAlt(localctx, 3)
                self.state = 162
                self.match(imprwParser.TRUTHVAL)
                pass
            elif token in [imprwParser.T__18]:
                self.enterOuterAlt(localctx, 4)
                self.state = 163
                self.match(imprwParser.T__18)
                self.state = 164
                self.expr(0)
                self.state = 165
                self.match(imprwParser.T__19)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[1] = self.series_sempred
        self._predicates[2] = self.stmt_sempred
        self._predicates[9] = self.compar_sempred
        self._predicates[10] = self.comparterm_sempred
        self._predicates[13] = self.expr_sempred
        self._predicates[14] = self.term_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def series_sempred(self, localctx:SeriesContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 1)
         

    def stmt_sempred(self, localctx:StmtContext, predIndex:int):
            if predIndex == 1:
                return self.precpred(self._ctx, 2)
         

    def compar_sempred(self, localctx:ComparContext, predIndex:int):
            if predIndex == 2:
                return self.precpred(self._ctx, 1)
         

    def comparterm_sempred(self, localctx:CompartermContext, predIndex:int):
            if predIndex == 3:
                return self.precpred(self._ctx, 1)
         

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 4:
                return self.precpred(self._ctx, 1)
         

    def term_sempred(self, localctx:TermContext, predIndex:int):
            if predIndex == 5:
                return self.precpred(self._ctx, 1)
         




